# axswarm

./: .gitignore  README.md  pyproject.toml
axswarm/: __init__.py  constraint.py  data.py  settings.py  solve.py  spline.py
examples/: simulate.py  utils.py
params/: settings.yaml
